// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostFooter enables tooltip when myvote is false 1`] = `
<div
  data-stylename="footer"
>
  <RoundImageRow
    data-stylename="people"
    imageUrls={
      Array [
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  />
  <span
    data-stylename="caption"
  >
    Joe, Sue and 2 others commented
  </span>
  <a
    data-for="postfooter-tt"
    data-stylename="vote-button"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={false}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <ReactTooltip
    delayShow={550}
    effect="solid"
    id="postfooter-tt"
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
</div>
`;

exports[`PostFooter matches the latest snapshot 1`] = `
<div
  data-stylename="footer"
>
  <RoundImageRow
    data-stylename="people"
    imageUrls={
      Array [
        undefined,
        undefined,
        undefined,
        undefined,
      ]
    }
  />
  <span
    data-stylename="caption"
  >
    Joe, Sue and 2 others commented
  </span>
  <a
    data-for="postfooter-tt"
    data-stylename="vote-button voted"
    data-tip="Upvote this post so more people see it."
    data-tip-disable={true}
  >
    <Icon
      data-stylename="arrowIcon"
      name="ArrowUp"
    />
    3
  </a>
  <ReactTooltip
    delayShow={550}
    effect="solid"
    id="postfooter-tt"
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
</div>
`;
